@@ -1,3 +1,9 @@
+2007-05-18  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/kernel/os7compat.c:
+	  - do not delete messages
+	  - handle mi_timer messages correctly
+
 2007-05-17  Brian Bidulock  <bidulock@openss7.org>
 
 	* doc/man/man9/mi_mpprintf.9.man: documentation update
